[package]
name = "ays"
version = "0.1.3"
edition = "2021"
description = "Pipe stdin to stdout after user confirmation"
authors = ["Daniel Pecos Martinez <me@danielpecos.com>"]
license = "MIT"
homepage = "https://github.com/dpecos/ays"
repository = "https://github.com/dpecos/ays"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
